# $Id: configure.in,v 1.1.1.1 2007/10/28 08:36:51 rdmp1c Exp $

dnl Process this file with autoconf to produce a configure script

AC_INIT(matching.cpp)
AM_INIT_AUTOMAKE(matching, 0.1)
AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_INSTALL
#AC_ARG_PROGRAM

# We need ranlib to make the library, and we need to define make
AC_PROG_RANLIB
AC_PROG_MAKE_SET

# Check for GTL

CFLAGS="$CFLAGS -I/usr/local/include"
CXXFLAGS="$CXXFLAGS -I/usr/local/include"
LDFLAGS="$LDFLAGS -L/usr/local/lib"

AC_CHECK_HEADERS(GTL/GTL.h)

AC_OUTPUT(Makefile graph/Makefile )

